--- a/Vanguard/assets/css/main.css
+++ b/Vanguard/assets/css/main.css
@@ -80,7 +80,7 @@ div[class^="PUNCBOX"] {
   left: 35%;
   position: absolute;
   z-index: 1;
-  background-image: url("assets/grid.jpeg");
+  background-image: url("interactive2/Vanguard/assets/grid.jpeg");
   background-size: 1em 1em;
 }
 
