--- a/Vanguard/assets/css/main.css
+++ b/Vanguard/assets/css/main.css
@@ -1,3 +1,7 @@
+body {
+  cursor: url('/Users/charles/Documents/CCA/3rd Year/Interactive 2/Sketches/assets/css/Cursor2.png'), default;
+}
+
 
 .stage {
   width: 39.5em;
