--- a/Sketches/assets/css/main.css
+++ b/Sketches/assets/css/main.css
@@ -1,5 +1,5 @@
 body {
-  cursor: url('/Users/charles/Documents/CCA/3rd Year/Interactive 2/Sketches/assets/css/Cursor2.png'), default;
+  cursor: url('Cursor2.png'), default;
 }
 
 
