--- a/assets/main.css
+++ b/assets/main.css
@@ -89,6 +89,16 @@
   padding: 10px;
 }
 
+.project2 {
+  color: red;
+  font-size: 6pt;
+  margin-left: 60px;
+  margin-top: 200px;
+  position: relative;
+  padding: 10px;
+}
+
+
 a {
   color: red;
   font: Arial;
