--- a/assets/main.css
+++ b/assets/main.css
@@ -80,6 +80,12 @@
   position: relative;
 }
 
+.CONTAINER {
+	position: relative;
+	width: 200vh;
+	float: left;
+}
+
 .project1 {
   color: red;
   font-size: 6pt;
@@ -821,7 +827,7 @@ box-shadow: inset 0em 0em 0 0.5em, inset 0em 1em 0 0.5em, 2em 2em 0 0.5em, 1em 3
   --------------------------------------------- */
 
   body, html {
- 
+
   }
 
   body {
